Changed path for css files

--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -11,8 +11,8 @@
 	 	<meta name="viewport" content="width=500">
 	 
 	 	<!--Boostrap must come before local css definitions-->
-	 	<link href="css/bootstrap.css" rel="stylesheet" type="text/css"> 
-	 	<link href="css/main.css" rel="stylesheet" type="text/css"> 
+	 	<link href="../css/bootstrap.css" rel="stylesheet" type="text/css"> 
+	 	<link href="../css/main.css" rel="stylesheet" type="text/css"> 
 
 	 	<!--JQuery .js must come before Bootstrap .js, or stuff won't work-->
 	 	<!--[put .js links here]-->
