adds json write for activities logged

--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -54,7 +54,7 @@
 
 					<!--need to add a method (i.e. post) and an action (i.e. go to /page)-->
           <!--do we need to link to the Json file here? So far it's just linked to the "hello.rb" file-->
-					<form>
+					<form method="POST" action="/log">
 
 						<div class="form-group">
 
