--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,6 +11,10 @@ body {
 	font-weight: bold;
 }
 
+#log-activity-section{
+	text-align: center;
+}
+
 .activity-input{
 	margin-top: 30px;
 	padding-top: 5px;
