--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -19,6 +19,8 @@
 	 	<!--JQuery .js must come before Bootstrap .js, or stuff won't work-->
 		<script src="./js/jquery-3.1.1.js"></script>
 		<script src="./js/jquery-ui.js"></script>
+		<script src="http://www.google.com/jsapi"></script>
+    	<script src="chartkick.js" type="text/javascript"></script>
 		
 		<script type="text/javascript">
 
