--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,7 +12,7 @@ body {
 }
 
 #log-activity-section{
-	text-align: center;
+	text-align: left;
 }
 
 .activity-input{
@@ -22,7 +22,7 @@ body {
 }
 
 #activity-summary-section{
-	margin-top: 100px;
+	margin-top: 50px;
 }
 
 .activity-summary-text{
