added validation for 0 minute entry

--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -50,8 +50,13 @@
 		    		return false;
 		    	}
 
-		       	if (duration <= 0){
+		       	if (duration < 0){
 		    		alert("We all wish we could turn back time!\nPlease enter a valid duration.");
+		    		return false;
+		    	}
+		       	
+		       	if (duration == 0){
+		    		alert("Did you mean to enter zero?\nPlease enter a valid duration.");
 		    		return false;
 		    	}
 
