--- a/views/month.erb
+++ b/views/month.erb
@@ -54,20 +54,18 @@
 
 			    <div class="col-md-10 col-xs-10">
 
-			    	<h2>My activity for the past 7 days <a href="/hello"><button class="btn btn-xs btn-default">TODAY</button></a>   <a href="/month"><button class="btn btn-xs btn-default">MY MONTH</button></a></h2>
-					
-					
+			    	<h2>My activity for the past 30 days <a href="/hello"><button class="btn btn-xs btn-default">TODAY</button></a>   <a href="/week"><button class="btn btn-xs btn-default">MY WEEK</button></a></h2>
+										
+			    	<% if @graph_data_month.empty? %>
 
-			    	<% if @graph_data_week.empty? %>
-
-						<p>Sorry, you haven't logged anything this week.</p>
+						<p>Sorry, you haven't logged anything this month.</p>
 
 					<% else %>	
 				   
-						<% if @graph_data_week.length >=1 %>
+						<% if @graph_data_month.length >=1 %>
 							
 							<div>
-							    <%= bar_chart(@graph_data_week, id: "activity-summary", width: "100%", xtitle: "Minutes Spent This Week") %>
+							    <%= bar_chart(@graph_data_month, id: "activity-summary", width: "100%", xtitle: "Minutes Spent This Month") %>
 							</div>						
 
 				    	<%end %>
