removed /hello path from erb files

--- a/views/week.erb
+++ b/views/week.erb
@@ -54,7 +54,7 @@
 
 			    <div class="col-md-10 col-xs-10">
 
-			    	<h2>My activity for the past 7 days <a href="/hello"><button class="btn btn-xs btn-default">TODAY</button></a>   <a href="/month"><button class="btn btn-xs btn-default">MY MONTH</button></a></h2>
+			    	<h2>My activity for the past 7 days <a href="/"><button class="btn btn-xs btn-default">TODAY</button></a>   <a href="/month"><button class="btn btn-xs btn-default">MY MONTH</button></a></h2>
 					
 					
 
