added logo to nav bar

--- a/views/month.erb
+++ b/views/month.erb
@@ -36,8 +36,8 @@
 
 			    <div class="navbar-header col-xs-12">
 
-			     	<p>[Username]'s Time Manager</p>
-
+					<p><img src ="./images/favicon.ico">&nbsp;&nbsp;[Username]'s Time Manager</p>
+			    
 			    </div>
 
 			</div>
