--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -87,7 +87,7 @@
 
 			    <div class="navbar-header col-xs-12">
 
-			     	<p>[Username]'s Time Manager</p>
+			    	<p><img src ="./images/favicon.ico">&nbsp;&nbsp;[Username]'s Time Manager</p>
 
 			    </div>
 
