proof of concept signin/login navigation

--- a/views/week.erb
+++ b/views/week.erb
@@ -36,7 +36,7 @@
 
 			    <div class="navbar-header col-xs-12">
 
-					<p><a href="/"><img src ="./images/favicon.ico"></a>&nbsp;&nbsp;[Username]'s Time Manager</p>
+					<p><a href="/homepage"><img src ="./images/favicon.ico"></a>&nbsp;&nbsp;[Username]'s Time Manager</p>
 
 			    </div>
 
@@ -54,7 +54,7 @@
 
 			    <div class="col-md-10 col-xs-10">
 
-			    	<h2>My activity for the past 7 days <a href="/"><button class="btn btn-xs btn-default">TODAY</button></a>   <a href="/month"><button class="btn btn-xs btn-default">MY MONTH</button></a></h2>
+			    	<h2>My activity for the past 7 days <a href="/homepage"><button class="btn btn-xs btn-default">TODAY</button></a>   <a href="/month"><button class="btn btn-xs btn-default">MY MONTH</button></a></h2>
 					
 					
 
