--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,7 +3,11 @@ body {
 	margin-bottom: 100px;
 }
 
-#header-text {
+#login-page{
+	text-align: center;
+}
+
+#header-text{
 	color: white;
 	padding: 10px;
 	font-size: 20px;
