--- a/views/month.erb
+++ b/views/month.erb
@@ -54,7 +54,7 @@
 
 			    <div class="col-md-10 col-xs-10">
 
-			    	<h2>My activity for the past 30 days <a href="/
+			    	<h2>My activity for the past 30 days <a href="/homepage
 "><button class="btn btn-xs btn-default">TODAY</button></a>   <a href="/week"><button class="btn btn-xs btn-default">MY WEEK</button></a></h2>
 										
 			    	<% if @graph_data_month.empty? %>
