--- a/views/signup.erb
+++ b/views/signup.erb
@@ -14,6 +14,26 @@
 
 	 	<!--JQuery .js must come before Bootstrap .js, or stuff won't work-->
 
+		<script type="text/javascript">
+  			
+			function validation_message() {
+
+				var name = document.getElementById("name").value;
+				var email = document.getElementById("email").value;
+				var password = document.getElementById("password").value;
+
+		       	if (name == "" || email == "" || password == ""){
+		    		alert("Please complete all fields");
+		    		return false;
+		    	}
+
+			    else{
+		        	return true;
+		    	}
+			}
+
+ 		</script>
+
 		<title>My Time Manager</title>
 
 		<link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico">
@@ -28,15 +48,15 @@
 
 		    	<div class="col-sm-offset-4 col-sm-4" id="login-page">
 
-					<h2>Please enter your details to get started</h2>
+					<h2>Please enter your details</h2>
 				
-					<form class="form-horizontal" method="POST" name"signupForm" action="/createaccount">
+					<form class="form-horizontal" method="POST" name"signupForm" onsubmit="return validation_message();" action="/createaccount">
 
 						<div class="form-group">
 												
 							<div>
 						
-								<input type="firstname" class="form-control" id="firstname" placeholder="Your first name">
+								<input type="text" class="form-control" name ="name" id="name" placeholder="Your first name">
 						
 							</div>
 						
@@ -46,7 +66,7 @@
 												
 							<div>
 						
-								<input type="email" class="form-control" id="useremail" placeholder="Your email address">
+								<input type="email" class="form-control" name="email" id="email" placeholder="Your email address">
 						
 							</div>
 						
@@ -56,7 +76,7 @@
 											
 							<div>
 						
-								<input type="password" class="form-control" id="userpassword" placeholder="Set your password">
+								<input type="password" class="form-control" name="password" id="password" placeholder="Set your password">
 						
 							</div>
 						
