--- a/views/login.erb
+++ b/views/login.erb
@@ -80,6 +80,8 @@
 
 					</form>
 
+					<a href="javascript:history.back()"><button class="btn btn-sm btn-default go-back">Go Back</button></a>
+
 				</div>
 			
 			</div>
