--- a/views/signup.erb
+++ b/views/signup.erb
@@ -86,6 +86,8 @@
 
 					</form>
 
+					<a href="javascript:history.back()"><button class="btn btn-sm btn-default go-back">Go Back</button></a>
+
 				</div>
 			
 			</div>
