first crack at twitter authentication for login

--- a/views/month.erb
+++ b/views/month.erb
@@ -34,10 +34,16 @@
 	  		<!--not sure why container-fluid needs to be used, but documentation says use it-->
 		    <div class="container-fluid">
 
-			    <div class="navbar-header col-xs-12">
+			    <div class="navbar-header col-xs-11">
 
-					<p><a href="/"><img src ="./images/favicon.ico"></a>&nbsp;&nbsp;[Username]'s Time Manager</p>
-			    
+			    	<p><a href="/"><img src ="./images/favicon.ico"></a>&nbsp;&nbsp;[Username]'s Time Manager</p>
+
+			    </div>
+
+			    <div class="navbar-header col-xs-1">
+
+			    	<a href="https://twitter.com/"><button class="btn btn-sm btn-default">Log Out</button></a>
+
 			    </div>
 
 			</div>
