--- a/views/notloggedin.erb
+++ b/views/notloggedin.erb
@@ -24,7 +24,7 @@
 
 		<div id="login-page">
 
-			<h1>Welcome to your helpful Time Manager app</h1>
+			<h1>You're logged out.</h1>
 						
 			<a href="/login"><button class="btn btn-lg btn-primary">Sign In With Twitter</button></a>
 
