added code to block pages if not logged in

--- a/views/week.erb
+++ b/views/week.erb
@@ -42,7 +42,7 @@
 
 			    <div class="navbar-header col-xs-1">
 
-					<a href="https://twitter.com/"><button class="btn btn-sm btn-default">Log Out</button></a>
+					<a href="/logout"><button class="btn btn-sm btn-default">Log Out</button></a>
 
 			    </div>
 
