--- a/views/month.erb
+++ b/views/month.erb
@@ -36,7 +36,7 @@
 
 			    <div class="navbar-header col-xs-12">
 
-					<p><a href="/"><img src ="./images/favicon.ico"></a>&nbsp;&nbsp;[Username]'s Time Manager</p>
+					<p><a href="/"><img src ="./images/favicon.ico"></a>&nbsp;&nbsp;<%= $user_name %>'s Time Manager</p>
 			    
 			    </div>
 
