--- a/views/notauth.erb
+++ b/views/notauth.erb
@@ -24,7 +24,7 @@
 
 		<div id="login-page">
 
-			<h1 class="login-text">Welcome to your helpful Time Manager app</h1>
+			<h1 class="login-text">Please sign in</h1>
 
 			<a href="/login"><button class="btn btn-lg btn-primary">Sign In With Twitter</button></a>
 
