added link to also sign out of Twitter

--- a/views/signedout.erb
+++ b/views/signedout.erb
@@ -24,8 +24,9 @@
 
 		<div id="login-page">
 
-			<h1>You're logged out.</h1>
-						
+			<h1>You're now logged out</h1>
+			<p class="login-text"><a href="https://twitter.com">Click here</a> to sign out of Twitter too</p>
+
 			<a href="/login"><button class="btn btn-lg btn-primary">Sign In With Twitter</button></a>
 
 		</div>
