--- a/views/month.erb
+++ b/views/month.erb
@@ -60,9 +60,10 @@
 
 			    <div class="col-md-10 col-xs-10">
 
-			    	<h2>My activity for the past 30 days <a href="/homepage
-"><button class="btn btn-xs btn-default">TODAY</button></a>   <a href="/week"><button class="btn btn-xs btn-default">MY WEEK</button></a></h2>
-										
+			    	<h2>My activity for the past 30 days</h2>
+
+					<a href="/homepage"><button class="btn btn-xs btn-default">TODAY</button></a>   <a href="/week"><button class="btn btn-xs btn-default">MY WEEK</button></a>
+
 			    	<% if @graph_data_month.empty? %>
 
 						<p>Sorry, you haven't logged anything this month.</p>
