--- a/views/week.erb
+++ b/views/week.erb
@@ -60,9 +60,9 @@
 
 			    <div class="col-md-10 col-xs-10">
 
-			    	<h2>My activity for the past 7 days <a href="/homepage"><button class="btn btn-xs btn-default">TODAY</button></a>   <a href="/month"><button class="btn btn-xs btn-default">MY MONTH</button></a></h2>
+			    	<h2>My activity for the past 7 days</h2>
 					
-					
+					<a href="/homepage"><button class="btn btn-xs btn-default">TODAY</button></a>   <a href="/month"><button class="btn btn-xs btn-default">MY MONTH</button></a>					
 
 			    	<% if @graph_data_week.empty? %>
 
