--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -12,12 +12,15 @@
 	 	<link href="./css/bootstrap.css" rel="stylesheet" type="text/css">
  	 	<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 	 	<link rel="stylesheet" href="./css/jquery-ui.css">
+	 	<link href="./css/bootstrap-select.css" rel="stylesheet" type="text/css">
 	 	<link href="./css/main.css" rel="stylesheet" type="text/css">
 
 	 	<!--JQuery .js must come before Bootstrap .js, or stuff won't work-->
 		<script src="./js/jquery-3.1.1.js"></script>
 		<script src="./js/jquery-ui.js"></script>
 		<script src="https://www.google.com/jsapi"></script>
+		<script src="./js/bootstrap.js"></script>
+		<script src="./js/bootstrap-select.js"></script>
     	<script src="./js/chartkick.js" type="text/javascript"></script>
 
 		<script type="text/javascript">
@@ -111,7 +114,7 @@
 
 			    <div class="col-md-6 col-xs-10" id="log-activity-section">
 
-			    	<h2>Log Activity</h2>
+			    	<h2 class="homepage-headings">Log Activity</h2>
 
 					<form method="POST" name"myForm" onsubmit="return validation_message();" action="/log">
 
@@ -159,7 +162,7 @@
 
 			</div>
 			<!--end of first row-->
-
+			
 			<!--start of second row-->
 
 			<div class="row">
@@ -169,7 +172,8 @@
 
 			    <div class="col-md-10 col-xs-10" id="activity-summary-section">
 
-			    	<h2>Today's Activity Summary <a href="/week"><button class="btn btn-xs btn-default">MY WEEK</button></a>   <a href="/month"><button class="btn btn-xs btn-default">MY MONTH</button></a></h2>
+			    	<h2 class="homepage-headings">Today's Activity Summary</h2>
+			    	<a href="/week"><button class="btn btn-xs btn-default">MY WEEK</button></a> <a href="/month"><button class="btn btn-xs btn-default">MY MONTH</button></a>
 
 			    	<% if @graph_data.empty? %>
 
@@ -200,6 +204,22 @@
 
 			</div>
 			<!--end of second row-->
+
+			<!--start of third row-->
+
+			<div class="row">
+
+			    <div class="col-md-offset-2 col-md-10 col-xs-11 col-xs-offset-1">
+
+			    	<h2 class="homepage-headings">My Targets
+					</h2>
+					<a href="/targets"> <button class="btn btn-xs btn-default">Go To Targets</button></a>
+			    	<p>Display summary target info here. Tell me how far I am away from my targets</p>
+															
+				</div>
+
+			</div>
+		<!--end of third row-->
 
 		<!--this /div closes the container-->
 	    </div>
